src/test/deca/context/invalid/resultats/test_visibility_cond1-cont.res
./src/test/deca/context/invalid/test_visibility_cond1.deca:26:1: The field x is not visible
